unpackaged/main/default/objects/axcessa_Platform_Engagement__c/axcessa_Platform_Engagement__c.object-meta.xml
<CustomObject>
    <description>When an axcessa customer is onboarded this is the record in which Software Solutions will manage the client</description>
    <label>aXcessa Store</label>
    <nameField>
        <label>aXcessa Store</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aXcessa Stores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>