unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>axcessa_Platform_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>