unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Active_Billing_Product_Total__c.field-meta.xml
<CustomField>
    <fullName>Active_Billing_Product_Total__c</fullName>
    <label>Active Billing Product Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>