unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Active_User_Change__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Change__c</fullName>
    <formula>if(

ISNULL(Last_Month_User_Count__c),0,

if(

ISNULL(Last_2_Month_User_Count__c),0,

(Last_Month_User_Count__c-Last_2_Month_User_Count__c)/Last_2_Month_User_Count__c


))</formula>
    <label>Active User Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>