unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Active_User_Rating__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Rating__c</fullName>
    <formula>if( Last_Month_User_Count__c &gt; 10, &quot;Power User&quot;,

if(Last_Month_User_Count__c &gt; 4,&quot;Average&quot;,

if(Last_Month_User_Count__c &lt; 5,&quot;Red Flag&quot;,&quot;No Data&quot;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Power User	-	10+ users
Average	-	4-9 users
Red Flag	-	0-3 users</inlineHelpText>
    <label>Active User Rating</label>
    <type>Text</type>
</CustomField>