unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Active_User_Rating_Code__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Rating_Code__c</fullName>
    <formula>if( Active_User_Rating__c =&quot;Red Flag&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User Rating Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>