unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Alternate_Names__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Names__c</fullName>
    <formula>Account__r.Alternate_Names__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Names</label>
    <type>Text</type>
</CustomField>