unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/axcessa_Engagement_Specialist__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Engagement_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Software Engagement Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>aXcessa Stores (Software Engagement Specialist)</relationshipLabel>
    <relationshipName>axcessa_Platform_Engagements2</relationshipName>
    <type>Lookup</type>
</CustomField>