unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/axcessa_Group__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group__c</fullName>
    <label>aXcessa Group</label>
    <referenceTo>axcessa_Group__c</referenceTo>
    <relationshipLabel>aXcessa Stores</relationshipLabel>
    <relationshipName>axcessa_Platform_Engagements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>