unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/axcessa_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Software_Version__c</fullName>
    <label>aXcessa Software Version</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>