unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/axcessa_User_ID__c.field-meta.xml
<CustomField>
    <fullName>axcessa_User_ID__c</fullName>
    <displayFormat>axc - {000000}</displayFormat>
    <label>aXcessa User ID</label>
    <type>AutoNumber</type>
</CustomField>