unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/axcessaPlatformEngagementID_18__c.field-meta.xml
<CustomField>
    <fullName>axcessaPlatformEngagementID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>aXcessaPlatformEngagementID (18)</label>
    <type>Text</type>
</CustomField>