unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipName>axcessa_Platform_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>