unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Billing_Account__r.Billing_Street__c  + &quot;, &quot; +
 Billing_Account__r.Billing_City__c  + &quot;,  &quot; +
 Billing_Account__r.Billing_State_Province__c  + &quot; &quot; +
 Billing_Account__r.Billing_Zip_Postal_Code__c + &quot;, &quot; +
 Billing_Account__r.Billing_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>