unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>