unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Billing_Suspended_End__c.field-meta.xml
<CustomField>
    <fullName>Billing_Suspended_End__c</fullName>
    <inlineHelpText>Date a billing suspension will end</inlineHelpText>
    <label>Billing Suspended End</label>
    <type>Date</type>
</CustomField>