unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Billing_Suspended_Start__c.field-meta.xml
<CustomField>
    <fullName>Billing_Suspended_Start__c</fullName>
    <inlineHelpText>Date a billing suspension will begin.</inlineHelpText>
    <label>Billing Suspended Start</label>
    <type>Date</type>
</CustomField>