unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Centralized_Support__c.field-meta.xml
<CustomField>
    <fullName>Centralized_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked store has moved to centralized support</inlineHelpText>
    <label>Centralized Support</label>
    <type>Checkbox</type>
</CustomField>