unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Client_Rating__c.field-meta.xml
<CustomField>
    <fullName>Client_Rating__c</fullName>
    <inlineHelpText>Stable		-	0,1,2 total points
Moderate Risk	-	3,4 total points
High Risk	-	5,6,7 total points</inlineHelpText>
    <label>Client Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>