unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Client_Rating_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Rating_Code__c</fullName>
    <formula>Active_User_Change_Code__c + 
Active_User_Rating_Code__c + 
Report_Usage_Change_Code__c + 
Report_Usage_Rating_Code__c + 
Tenure_Code__c +  
Engagement_Rating_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Rating Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>