unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>axcessa_Platform_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>