unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>The term of the contract</description>
    <label>Contract Term Months</label>
    <length>100</length>
    <type>Text</type>
</CustomField>