unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <label>Customer Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Power User</fullName>
            </value>
            <value>
                <fullName>Marginal Use</fullName>
            </value>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>