unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Data_Updated__c.field-meta.xml
<CustomField>
    <fullName>Data_Updated__c</fullName>
    <label>Data Updated</label>
    <type>Date</type>
</CustomField>