unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_between_Contract_Installed__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Contract_Installed__c</fullName>
    <formula>Installation_Complete__c -  Contract_Date_Received__c</formula>
    <label>Days between Contract &amp; Installed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>