unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_between_Installed_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Installed_Cancellation__c</fullName>
    <formula>Disconnected_Program__c -  Installation_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days between Installed &amp; Cancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>