unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_between_Installed_Program_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Installed_Program_Start__c</fullName>
    <formula>Program_Start__c -  Installation_Complete__c</formula>
    <label>Days between Installed &amp; Program Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>