unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_between_Start_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Start_Cancellation__c</fullName>
    <formula>Disconnected_Program__c -  Program_Start__c</formula>
    <label>Days between Start &amp; Cancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>