unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_on_aXcessa__c.field-meta.xml
<CustomField>
    <fullName>Days_on_aXcessa__c</fullName>
    <formula>if(isblank( Disconnected_Program__c),Today() - Program_Start__c, Program_Start__c -Disconnected_Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the store is disconnected the value will be (-) days from Program Start to Program Disconnected</inlineHelpText>
    <label>Days on aXcessa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>