unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_Since_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity_Date__c</fullName>
    <formula>Today() -  LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>