unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_Since_Last_Data_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Data_Update__c</fullName>
    <formula>if(Data_Updated__c &lt;= Today(),Today() -  Data_Updated__c ,9999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since the last Reynolds &amp; Reynolds database updated this store record. If this number is over 30 days there may be an issue with the data on the store or the Reynolds &amp; Reynolds data base.</inlineHelpText>
    <label>Days Since Last Data Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>