unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Days_Since_Last_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Engagement__c</fullName>
    <formula>Today() -  Last_Engagement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>