unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipName>axcessa_Platform_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>