unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 2</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipName>axcessa_Platform_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>