unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Disconnect_Program_Detail__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Program_Detail__c</fullName>
    <inlineHelpText>Detail behind disconnection - this field supports links and formatting and will appear on disconnect email notices.</inlineHelpText>
    <label>Disconnect Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>