unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Reason__c</fullName>
    <label>Disconnect Reason (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy/Sell</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Low Usage</fullName>
            </value>
            <value>
                <fullName>Price Increase / DRF</fullName>
            </value>
            <value>
                <fullName>Reynolds Ownership</fullName>
            </value>
            <value>
                <fullName>Unable to Install</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>Reason</fullName>
            </value>
            <value>
                <fullName>Cleaning Up Old Records</fullName>
                <isActive>false</isActive>
                <label>Cleaning Up Old Records</label>
            </value>
            <value>
                <fullName>Incompatible</fullName>
                <isActive>false</isActive>
                <label>Incompatible</label>
            </value>
            <value>
                <fullName>Lost Customer</fullName>
                <isActive>false</isActive>
                <label>Lost Customer</label>
            </value>
            <value>
                <fullName>Lost Prospect</fullName>
                <isActive>false</isActive>
                <label>Lost Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>