unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Disconnect_Reason_New__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Reason_New__c</fullName>
    <label>Disconnect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Reasons</valueSetName>
    </valueSet>
</CustomField>