unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Disconnected_Program__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Program__c</fullName>
    <label>Disconnected Program</label>
    <type>Date</type>
</CustomField>