unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Disconnecting__c.field-meta.xml
<CustomField>
    <fullName>Disconnecting__c</fullName>
    <formula>NOT( ISBLANK(  Disconnected_Program__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disconnecting?</label>
    <type>Checkbox</type>
</CustomField>