unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount</label>
    <type>Checkbox</type>
</CustomField>