unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/DMS__c.field-meta.xml
<CustomField>
    <fullName>DMS__c</fullName>
    <inlineHelpText>DMS as defined by Reynolds &amp; Reynolds data loads</inlineHelpText>
    <label>Reynolds Data Load DMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>