unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/DMS_Account__c.field-meta.xml
<CustomField>
    <fullName>DMS_Account__c</fullName>
    <formula>Account__r.DMS_Text_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMS</label>
    <type>Text</type>
</CustomField>