unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/DR_Fee__c.field-meta.xml
<CustomField>
    <fullName>DR_Fee__c</fullName>
    <inlineHelpText>Current DR Fee</inlineHelpText>
    <label>DR Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>