unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/DR_Fee_Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>DR_Fee_Contract_Start__c</fullName>
    <inlineHelpText>Original DR Fee at contract signing</inlineHelpText>
    <label>DR Fee (Contract Start)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>