unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/DR_Fee_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>DR_Fee_Price_Increase__c</fullName>
    <formula>DR_Fee__c -  DR_Fee_Contract_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR Fee Price Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>