unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/DRF_Fee_Change__c.field-meta.xml
<CustomField>
    <fullName>DRF_Fee_Change__c</fullName>
    <inlineHelpText>DRF Fee Change from Reynolds</inlineHelpText>
    <label>DRF Fee Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>