unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Engagement_Rating__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Rating__c</fullName>
    <formula>IF(AND( (Engagement_Timer__c &gt; 89),( Tenure__c = &quot;Power User&quot;)),&quot;Red Flag&quot;,


IF(AND( (Engagement_Timer__c &gt; 59),( Tenure__c = &quot;Average&quot;)),&quot;Red Flag&quot;,

IF(Engagement_Timer__c &gt; 29, &quot;Red Flag&quot;,&quot;Normal&quot;

)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Rating</label>
    <type>Text</type>
</CustomField>