unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Engagement_Rating_Code__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Rating_Code__c</fullName>
    <formula>if(Engagement_Rating__c = &quot;Red Flag&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Rating Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>