unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Engagement_Timer__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Timer__c</fullName>
    <formula>today()- Last_Engagement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>