unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Installation_Case__c.field-meta.xml
<CustomField>
    <fullName>Installation_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>aXcessa Stores</relationshipLabel>
    <relationshipName>axcessa_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>