unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Installation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Installation_Complete__c</fullName>
    <inlineHelpText>Date Installation was completed</inlineHelpText>
    <label>Ready for Training Since</label>
    <type>Date</type>
</CustomField>