unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Installation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Installation_Notes__c</fullName>
    <label>Installation Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>