unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Installation_Setup_Received__c.field-meta.xml
<CustomField>
    <fullName>Installation_Setup_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Setup Docs Received</label>
    <type>Checkbox</type>
</CustomField>