unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed By Customer</fullName>
            </value>
            <value>
                <fullName>DMS Issue</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Transfer From Reynolds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>