unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Last_2_Month_Report_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_2_Month_Report_Count__c</fullName>
    <description>This is used to extract the actual month prior from ReyRey upload. The ReyRey upload combines last month and previous 2 month counts together so this field subtracts last months from the Last 2 Months data points.</description>
    <formula>Last_2_Month_Report_Count_Code__c - Last_Month_Report_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 2 Month Report Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>