unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Last_2_Month_Report_Count_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_2_Month_Report_Count_Code__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Report count from two months prior</description>
    <inlineHelpText>Report count from two months prior</inlineHelpText>
    <label>Last 2 Month Report Count (Code)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>