unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Last_2_Month_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_2_Month_User_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>User count from two months prior</description>
    <inlineHelpText>User count from two months prior</inlineHelpText>
    <label>Last 2 Month User Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>