unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Last_Month_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_User_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Last Month User Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>