unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <label>Lead Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>