unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Legacy_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Program_ID__c</fullName>
    <description>This is the old ID for the program record</description>
    <label>Legacy Program ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>