unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>axcessa_Platform_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>