unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Mobile_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Cancellation_Date__c</fullName>
    <label>Mobile Cancellation Date</label>
    <type>Date</type>
</CustomField>