unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Mobile_Disconnect_Detail__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Disconnect_Detail__c</fullName>
    <label>Mobile Disconnect Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mobile_Disconnect_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doesn&#39;t See Value</fullName>
            </value>
            <value>
                <fullName>Insufficient Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>