unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Mobile_Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Disconnect_Reason__c</fullName>
    <label>Mobile Disconnect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>