unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Mobile_End__c.field-meta.xml
<CustomField>
    <fullName>Mobile_End__c</fullName>
    <label>Mobile End</label>
    <type>Date</type>
</CustomField>