unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Mobile_Fee_Change__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Fee_Change__c</fullName>
    <inlineHelpText>Reynolds Mobile Fee price Change</inlineHelpText>
    <label>Mobile Fee Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>