unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Mobile_Start__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Start__c</fullName>
    <label>Mobile Start</label>
    <type>Date</type>
</CustomField>