unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <inlineHelpText>Initial contractual amount</inlineHelpText>
    <label>Monthly Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>