unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Monthly_Fee_Change__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Change__c</fullName>
    <inlineHelpText>Amount in which Reynolds has changed the Monthly Store Fee amount</inlineHelpText>
    <label>Monthly Fee Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>