unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Monthly_Fee_Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Contract_Start__c</fullName>
    <inlineHelpText>Original monthly fee at contract signing</inlineHelpText>
    <label>Monthly Fee (Contract Start)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>