unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Monthly_Fee_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Price_Change__c</fullName>
    <formula>Monthly_Fee__c -  Monthly_Fee_Contract_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Fee Price Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>