unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Months_on_axcessa__c.field-meta.xml
<CustomField>
    <fullName>Months_on_axcessa__c</fullName>
    <formula>if(MONTH(Disconnected_Program__c)&gt;0,



((YEAR(Disconnected_Program__c) *12)+MONTH(Disconnected_Program__c))

 +

(
IF((MONTH (Disconnected_Program__c) = MONTH(Program_Start__c)),0,1)
) 

- 

((YEAR(Program_Start__c) * 12) + MONTH(Program_Start__c))

,



((YEAR(Today()) *12)+MONTH(Today()))

 +

(
IF((MONTH (Today()) = MONTH(Program_Start__c)),0,1)
) 

- 

((YEAR(Program_Start__c) * 12) + MONTH(Program_Start__c))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months on aXcessa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>